# cupy

./: .coveragerc  .deepsource.toml  .flake8.cython  .gitignore  .gitmodules  .mergify.yml  .pep8  .pre-commit-config.yaml  .readthedocs.yaml  .ruff.toml  .travis.yml  CITATION.bib  CODE_OF_CONDUCT.md  CUPY_PR_REVIEW_SUMMARY.md  CodeOfConduct.md  GEMINI.md  LICENSE  MANIFEST.in  README.md  README_cupy.md  TODO.md  VERSION  appveyor.yml  benchmark.py  chainer_bibtex.txt  chainer_setup_build.py  clean_cpp_so_files.sh  codecov.yml  cupy_setup_build.py  ersitsmaDocumentsCupydevcupypre-commit run -a  install.sh  note_for_complex32  numpy_cupy_implementation.md  pre-commit  pyproject.toml  readthedocs.yml  ruff.toml  run_chip.py  setup.cfg  setup.py  (+17 more)
.github/: CODEOWNERS  CONTRIBUTING.md  ISSUE_TEMPLATE.md  dependabot.yaml
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  documentation.yml  feature.yml
.github/workflows/: auto-cc.yml  backport-reminder.yml  backport.yml  build-wheel.yml  check-txt.yml  ci-trigger.yml  ci.yml  docker.yml  evict-actions-cache.yml  flexci.yml  flexci_dispatcher.py  format-txt.yml  pr-project.yml  pr-updated.yml  pretest-rocm-test.sh  pretest.yml  publish.yml  rocm-ci.yml  self-hosted-ci.yml  self-hosted-gh-action.yml  test.yml
.pfnci/: README.md  config.pbtxt  config.tags.json  coverage.md  coverage.rst  flexci_notify.py  flexci_test_tag.py  generate.py  hint.pbtxt  matrix.yaml  py27and35.Dockerfile  py37.Dockerfile  run.sh  schema.yaml  script.sh  trim_cupy_kernel_cache.py  wheel_nightly.sh
.pfnci/linux/: README.md  flexci-prep.sh  flexci.sh  main-flexci-prep.sh  main-flexci-rocm-build.sh  main-flexci-stable.sh  main-flexci.sh  main-self-hosted-ci.sh  run.sh  update-cuda-driver.sh
.pfnci/windows/: _cache_download.bat  _cache_upload.bat  _error_handler.ps1  _flexci.ps1  _use_cuda.bat  _use_python.bat  main.bat  run.bat  test.ps1
appveyor/: install-cuda.ps1
backends/: cupy_backend_common.h  cupy_backend_runtime.h  cupy_cutensor.h  cupy_lapack.h  cupy_profiler.h  cupy_sparse.h
backends/ascend/: aclOpTemplate.h  acl_general_ops.h  acl_math.h  acl_math_ops.h  acl_op_template.h  acl_opinfo.h  cupy_ascend_common.h  cupy_ascend_profiler.h  cupy_ascend_runtime.h  cupy_ascend_texture.h  cupy_ascend_types.h  cupy_hccl.h  not_supported_api.h
backends/backend/: cupy_nccl.h  stream.pyx
backends/cuda/: cupy_cutensor.h
backends/stub/: cupy_cuComplex.h  cupy_cuda.h  cupy_nvtx.h  cupy_stub_runtime.h
batchnorm/: elementwise.py  fuse.py  gen_input.py  nofuse.py  test.py
benchmark/: elementwise.py  matmul.py  reduce.py  run_all.py  util.py
benchmarks/cupy-perf/: cupy_perf.py  run.py  run2.py
chain/: __init__.py  cudnn.py  function.py  function_set.py  gradient_check.py  optimizer.py  variable.py
chain/functions/: __init__.py  accuracy.py  basic_math.py  dropout.py  embed_id.py  identity.py  linear.py  lstm.py  relu.py  sigmoid.py  softmax.py  softmax_cross_entropy.py  tanh.py
chain/optimizers/: sgd.py
chainer/: __init__.py  _report.py  computational_graph.py  cuda.py  cuda_fusion.py  cudnn.py  flag.py  function.py  function_set.py  gradient_check.py  graph_builder.py  initializations.py  initializer.py  link.py  optimizer.py  random.py  reporter.py  serializer.py  statistics.py  variable.py
chainer/caffe/: __init__.py  caffe_function.py
chainer/cudnn/: LICENCE_libcudnn  __init__.py  cudnn.py  libcudnn.py
chainer/dataset/: __init__.py  convert.py  dataset_mixin.py  download.py  iterator.py
chainer/datasets/: __init__.py  cifar.py  dict_dataset.py  image_dataset.py  mnist.py  ptb.py  sub_dataset.py  transform_dataset.py  tuple_dataset.py
chainer/function_hooks/: __init__.py  cuda_profile.py  debug_print.py  timer.py
chainer/functions/: __init__.py  accuracy.py  basic_math.py  batch_normalization.py  bilinear.py  clipped_relu.py  concat.py  convolution_2d.py  copy.py  cross_covariance.py  ctc.py  dropout.py  embed_id.py  gaussian.py  hierarchical_softmax.py  identity.py  inception.py  inceptionbn.py  leaky_relu.py  linear.py  local_response_normalization.py  lstm.py  matmul.py  mean_squared_error.py  negative_sampling.py  nonparameterized_convolution_2d.py  nonparameterized_linear.py  prelu.py  (+14 more)
ci/: versions.yml
cuda_deps/: .gitignore  setup.py
cupy/: __init__.py  __init__.pyi  _core2  _cudnn.pyx  _environment.py  _environment_check.pyx  _execution_stats.py  _from_numpy.py  _init.py  _stub.py  _util.pyx  _version.py  carray.cuh  carray.pxi  carray.py  carray.pyx  cindexer.py  core  core.pyx  cublas.py  cudnn.py  cudnn.pyx  cufft.py  cusolver.py  cusolver.pyx  cusparse.py  cutensor.py  cutensor.pyx  elementwise.pxi  elementwise.py  flags.py  internal.py  reduction.pxi  reduction.py  util.py  util.pyx
cupy_backends/: cupy_backend.h  cupy_backend_runtime.h  cupy_blas.h  cupy_complex.h  cupy_cuda.h  cupy_cuda_runtime.h  cupy_cudnn.h  cupy_cugraph.h  cupy_cusparse.h  cupy_cusparselt.h  cupy_cutensor.h  cupy_lapack.h  cupy_nccl.h  cupy_nvptx.h  cupy_profiler.h  cupy_rand.h  cupy_rtc.h  cupy_sparse.h  cupy_tx.h
cupy_cuda/: cublas.pxd  cublas.pyx  cudnn.pyx  cupy_cusolver.h  curand.pxd  curand.pyx  cusolver.pxd  cusolver.pyx  cusparse.pxd  cusparse.pyx  cutensor.pyx  profiler.pyx  runtime.pxd  runtime.pyx  stream.pyx
cupyx/: __init__.py  _gufunc.py  _pinned_array.py  _rsqrt.py  _runtime.py  _scatter.py  _texture.py  _ufunc_config.py  cudnn.pyx  cusolver.py  cusolver.pyx  cusparse.py  cutensor.py  cutensor.pyx  graph_functional_api.py  lapack.py  runtime.py  scatter.py  time.py
docker/: Dockerfile
docs/: LICENSE_THIRD_PARTY  Makefile  requirements.txt  requirements_docs.txt  rocm-requirements.txt
einsum/: einsum.py  test_einsum.py  test_einsum_cupy.py
examples/: README.md
install/: build.py  mypy.ini  test_build.py  test_utils.py  utils.py
scripts/: chainer-cuda-requirements
tests/: attr.py  conftest.py  run_tests_rocm.py  test_computational_graph.py  test_cuda.py  test_function.py  test_function_set.py  test_gradient_check.py  test_graph_builder.py  test_optimizer.py  test_runnable.py  test_variable.py  test_variable.py.bak
(+3154 files in other folders)
