[flake8]
exclude = .eggs,*.egg,build,docs,.git

[pep8]
exclude = .eggs,*.egg,build,.git

[tool:pytest]
filterwarnings =
    error::FutureWarning
    # ignore FutureWarning from cupy._util.experimental
    ignore:.* is experimental\.:FutureWarning:cupy
    ignore::UserWarning
    error::DeprecationWarning
    error::PendingDeprecationWarning
    error::numpy.VisibleDeprecationWarning
    error::numpy.ComplexWarning
    # importing old SciPy is warned because it tries to
    # import nose via numpy.testing
    ignore::DeprecationWarning:scipy\._lib\._numpy_compat
    # importing stats from old SciPy is warned because it tries to
    # import numpy.testing.decorators
    ignore::DeprecationWarning:scipy\.stats\.morestats
    # Using `scipy.sparse` against NumPy 1.15+ raises warning
    # as it uses `np.matrix` which is pending deprecation.
    # Also exclude `numpy.matrixlib.defmatrix` as SciPy and our
    # test code uses `np.asmatrix`, which internally calls
    # `np.matrix`.
    ignore::PendingDeprecationWarning:scipy\.sparse\.\w+
    ignore::PendingDeprecationWarning:numpy\.matrixlib\.defmatrix
    # pyreadline (dependency from optuna -> cliff -> cmd2) uses deprecated ABCs
    ignore:Using or importing the ABCs from:DeprecationWarning:pyreadline

[metadata]
license_file = docs/source/license.rst
