[flake8]  # autopep8 would honor this setting, but not the other way around
exclude = .eggs,*.egg,build,docs,.git,*cupy/array_api,*tests/cupy_tests/array_api_tests
per-file-ignores =
    # ignore long lines containing arrays of numerical constants
    cupyx/scipy/special/_gammainc.py:E501

[tool:pytest]
filterwarnings =
    error::FutureWarning
    # ignore FutureWarning from cupy._util.experimental
    ignore:.* is experimental\.:FutureWarning:cupy
    ignore::UserWarning
    error::DeprecationWarning
    error::PendingDeprecationWarning
    error::numpy.VisibleDeprecationWarning
    error::numpy.ComplexWarning
    # distutils (Python 3.10)
    ignore:The distutils(.+) is deprecated:DeprecationWarning
    # pkg_resources
    ignore::DeprecationWarning:pkg_resources
    # importing old SciPy is warned because it tries to
    # import nose via numpy.testing
    ignore::DeprecationWarning:scipy\._lib\._numpy_compat
    # importing stats from old SciPy is warned because it tries to
    # import numpy.testing.decorators
    ignore::DeprecationWarning:scipy\.stats\.morestats
    # Using `scipy.sparse` against NumPy 1.15+ raises warning
    # as it uses `np.matrix` which is pending deprecation.
    # Also exclude `numpy.matrixlib.defmatrix` as SciPy and our
    # test code uses `np.asmatrix`, which internally calls
    # `np.matrix`.
    ignore::PendingDeprecationWarning:scipy\.sparse\.\w+
    ignore::PendingDeprecationWarning:numpy\.matrixlib\.defmatrix
    # pyreadline (dependency from optuna -> cliff -> cmd2) uses deprecated ABCs
    ignore:Using or importing the ABCs from:DeprecationWarning:pyreadline
    # Ignore warnings from Optuna 3.0 internal code
    # TODO(kmaehashi): Remove after the issue is fixed in Optuna.
    ignore:(.+?) has been deprecated in v3.0.0:FutureWarning:optuna

    # setuptools 65+
    # TODO(kmaehashi): Remove distutils from cupy_builder to remove this
    ignore:Absolute path '(.+?)' is being replaced with a relative path '(.+?)' for outputs:DeprecationWarning:distutils
xfail_strict=true

[metadata]
license_files = docs/source/license.rst

[mypy]
ignore_missing_imports = True
disable_error_code = attr-defined
