[metadata]
license_files = docs/source/license.rst

[flake8]  # for flake8 & autopep8
# Exclude patterns need to match with absolute/relative file/directory path.
exclude = *.git*, *.eggs*, *cupy/array_api*, *tests/cupy_tests/array_api_tests*, *docs/source*
per-file-ignores =
    # ignore long lines containing arrays of numerical constants
    cupyx/scipy/special/_gammainc.py:E501

[mypy]
# Keep in sync with the list in .pre-commit-config.yaml
files = cupy, cupyx, cupy_backends, .github, .pfnci
ignore_missing_imports = True
disable_error_code = attr-defined

[tool:pytest]
addopts = --strict-markers
markers =
    slow
    multi_gpu
filterwarnings =
    error::FutureWarning
    # ignore FutureWarning from cupy._util.experimental
    ignore:.* is experimental\.:FutureWarning:cupy
    ignore::UserWarning
    error::DeprecationWarning
    error::PendingDeprecationWarning
    error::cupy.exceptions.VisibleDeprecationWarning
    error::cupy.exceptions.ComplexWarning
    # distutils (Python 3.10)
    ignore:The distutils(.+) is deprecated:DeprecationWarning
    ignore:dep_util is Deprecated:DeprecationWarning
    # pkg_resources
    ignore::DeprecationWarning:pkg_resources
    ignore:pkg_resources is deprecated
    # importing old SciPy is warned because it tries to
    # import nose via numpy.testing
    ignore::DeprecationWarning:scipy\._lib\._numpy_compat
    # importing stats from old SciPy is warned because it tries to
    # import numpy.testing.decorators
    ignore::DeprecationWarning:scipy\.stats\.morestats
    # Using `scipy.sparse` against NumPy 1.15+ raises warning
    # as it uses `np.matrix` which is pending deprecation.
    # Also exclude `numpy.matrixlib.defmatrix` as SciPy and our
    # test code uses `np.asmatrix`, which internally calls
    # `np.matrix`.
    ignore::PendingDeprecationWarning:scipy\.sparse\.\w+
    ignore::PendingDeprecationWarning:numpy\.matrixlib\.defmatrix
    # pyreadline (dependency from optuna -> cliff -> cmd2) uses deprecated ABCs
    ignore:Using or importing the ABCs from:DeprecationWarning:pyreadline
    # Ignore warnings from Optuna 3.0 internal code
    # TODO(kmaehashi): Remove after the issue is fixed in Optuna.
    ignore:(.+?) has been deprecated in v3.0.0:FutureWarning:optuna
    # Ignore warnings from SQLAlchemy on which Optuna depends
    ignore:Deprecated API features detected! These feature\(s\) are not compatible with SQLAlchemy 2\.0\.:DeprecationWarning:optuna
    ignore:(.+?)SQLAlchemy 2\.0(.+?):DeprecationWarning
    # setuptools 65+
    # TODO(kmaehashi): Remove distutils from cupy_builder to remove this
    ignore:Absolute path '(.+?)' is being replaced with a relative path '(.+?)' for outputs:DeprecationWarning:distutils
xfail_strict=true
